Fixing some errors in pom.